--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="Portfolio.css">
+    <link rel="stylesheet" href="index.css">
     <title>My Portfolio</title>
 </head>
 <body>
